[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[project]
name = "cml-exporter"
version = "1.0.0"
requires-python = ">=3.12"
license = "BSD-2-Clause"
license-files = ["LICENSE"]
authors = [{ name = "Joe Clarke", email = "jclarke@cisco.com" }]
description = "Cisco Modeling Labs Prometheus Exporter"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["requests", "prometheus_client"]

[tool.black]
line-length = 140

[dependency-groups]
dev = ["pytest"]
